--- a/Tema4/Worksheet1/index.html
+++ b/Tema4/Worksheet1/index.html
@@ -5,7 +5,12 @@
     <title></title>
   </head>
   <body onload="tabla()">
-    <img src="https://avatars3.githubusercontent.com/u/8781623?s=400&u=e2ce7a58d09fa48b1e60180e1c6690b6bcedacb2&v=4" width="100" height="100" id="ball">
+     <img onmousedown="pinchar(event)" src="https://i.pinimg.com/originals/1d/a4/bd/1da4bd38e56ef970fe9d9b4e1b093799.jpg" width="100" height="100" id="ball">
+     <img onmousedown="pinchar(event)" src="https://i.pinimg.com/originals/1d/a4/bd/1da4bd38e56ef970fe9d9b4e1b093799.jpg" width="100" height="100" id="ball2">
+     <img onmousedown="pinchar(event)" src="https://i.pinimg.com/originals/1d/a4/bd/1da4bd38e56ef970fe9d9b4e1b093799.jpg" width="100" height="100" id="ball25">
+     <img onmousedown="pinchar(event)" src="https://i.pinimg.com/originals/1d/a4/bd/1da4bd38e56ef970fe9d9b4e1b093799.jpg" width="100" height="100" id="ball3">
+     <img onmousedown="pinchar(event)" src="https://i.pinimg.com/originals/1d/a4/bd/1da4bd38e56ef970fe9d9b4e1b093799.jpg" width="100" height="100" id="ball4">
+     <img onmousedown="pinchar(event)" src="https://i.pinimg.com/originals/1d/a4/bd/1da4bd38e56ef970fe9d9b4e1b093799.jpg" width="100" height="100" id="ball5">
     <script src="script.js" >
     </script>
     <label id="lbPosicion"></label>
