--- a/Tema5/Ex.Worksheet5/Mvc/Vista.html
+++ b/Tema5/Ex.Worksheet5/Mvc/Vista.html
@@ -2,16 +2,16 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Notas</title>
-    <script src="script.js" charset="utf-8"></script>
+    <title>Notaas</title>
+    <script src="Controlador.js" charset="utf-8" type="module"></script>
     <link rel="stylesheet" href="./Css/modoclaro.css">
   </head>
   <body id="board">
    <div class="topnav">
-      <a class="add" onclick="crear()">Añadir</a>
+      <a class="add">Añadir</a>
       <a class="recargar" onclick="location.reload()">Recargar</a>
       <a class="eliminar" onclick="eliminartodo()">Eliminar Todo</a>
-      <a class="modo" onclick="cambiarVista()">Modo claro</a>
+      <a class="modo">Modo claro</a>
     </div>
     <div class="" id="bloque"></div>
   </body>
